--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>React Common Libraries</title>
+  <title>React Common Libraries by ecasanova</title>
   </head>
   <body>
     <div id="root"></div>
